--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #6f2716;
+  		background-color: #e5e1bb;
 		  font-family: "helvetica"; 
-  		color: #ffffff;
+  		color: #000;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #90d8e9; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #222; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #90d8e9; }
-    h3 { text-align: center; color: #90d8e9; }
-    a { color: #90d8e9; }
+		h2 { font-size: 1.5em; color: #444; }
+    h3 { text-align: center; color: #444; }
+    a { color: #444; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
+		pre { background: #000; color: #000; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
