--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #222; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #38372F; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
 		h2 { font-size: 1.5em; color: #444; }
@@ -46,7 +46,7 @@
     </div>
       
     <h1><a href="http://github.com/mnutt/limewire-remote">limewire-remote</a> 
-      <span class="small">by <a href="http://github.com/mnutt">mnutt</a></small></h1>
+      <div class="small">by <a href="http://github.com/mnutt">mnutt</a></div></h1>
 
     <div class="description">
       Rails-based remote control for limewire
