Add logo, some ugly html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #38372F; margin-bottom: 3px; }
+		h1 { font-size: 2.5em; color: #38372F; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
 		h2 { font-size: 1.5em; color: #444; }
     h3 { text-align: center; color: #444; }
     a { color: #444; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+    .description { font-size: 1em; margin-bottom: 30px; margin-top: 10px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #FFF; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
@@ -37,17 +37,19 @@
   <a href="http://github.com/mnutt/limewire-remote"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   
   <div id="container">
-
     <div class="download">
       <a href="http://github.com/mnutt/limewire-remote/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/mnutt/limewire-remote/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
-      
-    <h1><a href="http://github.com/mnutt/limewire-remote">limewire-remote</a> 
-      <div class="small">by <a href="http://github.com/mnutt">mnutt</a></div></h1>
 
+    <div id="logo" style="float: left;"> 
+      <img src="limewire_remote.png" style="margin-right: -50px; margin-left:
+      -50px;"/>
+    </div>
+    <h1><div style="height: 120px;"> </div><a href="http://github.com/mnutt/limewire-remote">limewire-remote</a> 
+    </h1>
     <div class="description">
       Rails-based remote control for limewire
     </div>
