add logo, some ugly html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #e5e1bb;
+  		background-color: #eaeaef;
 		  font-family: "helvetica"; 
   		color: #000;
     }
