--- a/loading.html
+++ b/loading.html
@@ -15,7 +15,7 @@
         text-align: center;
         margin-top: 100px;
         font-family: 'Lucida Grande',Helvetica,sans-serif;
-        background-color: #eee;
+        background-color: #eeeeee;
       }
       #image-loader {
         width: 1px;
