--- a/loading.html
+++ b/loading.html
@@ -32,6 +32,6 @@
   <body onload="loadImg();">
     <div id="image-loader"></div>
     <img src="images/loading.gif"/>
-    <h1.message>LimeWire Remote is loading...</h1>
+    <h1 class="message">LimeWire Remote is loading...</h1>
   </body>
 </html>
