--- a/loading.html
+++ b/loading.html
@@ -26,6 +26,12 @@
         visibility: hidden;
       }
       h1 { font-weight: normal; }
+      #html32 {
+        display: block;
+        margin: auto;
+        width: 300px;
+        text-align: left;
+      }
     </style>
   </head>
   
