--- a/loading.html
+++ b/loading.html
@@ -40,7 +40,10 @@
     <img src="images/loading.gif"/>
     <h1 id="message">LimeWire Remote is loading...</h1>
     <p id="html32">
-      You seem to be running Mac or Linux.  For an unfortunate variety of reasons, there is no support for a browser embedded in java on these platforms.  Please reload <a href="http://localhost:4422">this link</a> until it works.
+      You seem to be running Mac or Linux.  For an unfortunate variety of reasons, 
+      there is no support for a browser embedded in java on these platforms.  Please 
+      reload <a href="http://localhost:4422">this link</a> until it works. It usually
+      takes around 20 seconds.
     </p>
   </body>
 </html>
