Testing the loading script.

--- a/loading.html
+++ b/loading.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type='text/javascript'>
+      alert("testing script");
       function loadImg() {
         var img = "<img onload='goToLocation();' src='http://localhost:4422/images/limewire_remote_logo.png' />";
         document.getElementById('image-loader').innerHTML = img;
