--- a/api.html
+++ b/api.html
@@ -22,8 +22,8 @@
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #444; }
-    h3 { color: #444; }
-    h4 { color: #71B00D; margin-bottom: 0.2em; }
+    h3 { margin-top: 1.5em; color: #444; }
+    h4 { margin-top: 1.5em; color: #71B00D; margin-bottom: 0.2em; }
     a { color: #444; }
     .description { font-size: 1em; margin-bottom: 30px; margin-top: 10px; font-style: italic;}
     .download { float: right; }
