Add the RIGHT anchor

--- a/api.html
+++ b/api.html
@@ -346,7 +346,7 @@ Note that the first download is paused, so its remaining time is infinite.
   <li class="required"><code>urn</code> - the sha1 urn of the result to download (required)</li>
 </ul>
 
-<a id="Download"></a>
+<a id="Collection"></a>
 <h3>Collection</h3>
 
 <h4 class="command">GET /collections</h4>
