Move image to local

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       Web-based remote control for LimeWire
     </div>
 
-    <img class="thumb" src="http://mike.limebits.com/screenshots/lw_player-1.png" style="width: 100%" />
+    <img class="thumb" src="images/lw_player-1.png" style="width: 100%" />
 
     <p>LimeWire Remote is a web-based interface for LimeWire, the P2P application.  It is also a ruby web framework for extending LimeWire.</p>
 
